# tee_seL4_teeos

./: CMakeLists.txt  Findsel4_teeos.cmake  README.md  overlay-polarfire_amp.dts  sel4_teeos.cmake  settings.cmake
include/: key_service.h  pkcs11_service.h  public_key.pem.h  ree_tee_msg.h  sel4_circ.h  sel4_crashlog.h  sel4_optee_serializer.h  spinlock.h  sys_ctl_service.h  teeos_common.h  teeos_service.h
include/ihc/: sel4_ihc.h
include/ihc/hss/: miv_ihc_config.h  miv_ihc_regs.h
include/linux/dt-bindings/mailbox/: miv-ihc.h
include/linux/mailbox/: miv_ihc_message.h
include/rpmsg_lite/: rpmsg_sel4.h
include/rpmsg_lite/rpmsg/: spinlock_yield.h
include/rpmsg_lite/rpmsg/platform/microchip/miv/: rpmsg_platform.h
ringbuffer_test/: CMakeLists.txt  README.md  ringbuffer.c  ringbuffer.h  ringbuffer_test.cpp
ringbuffer_test/include/: sel4_circ.h  sel4runtime.h  teeos_common.h
ringbuffer_test/include/sel4/: types.h
src/: app2.c  comm_app.c  key_service.c  pkcs11_service.c  rootserver.c  sel4_optee_serializer.c  sys_ctl_app.c  sys_ctl_services.c  teeos_service.c
src/libtomcrypt/: CMakeLists.txt
src/libtommath/: CMakeLists.txt  mp_rand.c  s_mp_rand_platform.c
src/littlefs/: CMakeLists.txt
src/optee_crypto/: CMakeLists.txt  rng_hw.c  sel4_user_ta.c  sys.c  sys_sel4.h  user_ta_entry.c  utee.c
src/optee_crypto/include/sys/: cdefs.h
src/rpmsg/: CMakeLists.txt  rpmsg_sel4.c
src/rpmsg/rpmsg_lite/: rpmsg_lite.c  rpmsg_ns.c  rpmsg_queue.c
src/rpmsg/rpmsg_lite/porting/environment/: rpmsg_env_sel4.c
src/rpmsg/rpmsg_lite/porting/platform/microchip/miv/: rpmsg_platform_sel4.c
src/rpmsg/virtio/: virtqueue.c
src/sys_ctl_service/: CMakeLists.txt  sys_ctl_services.c
src/teeos_service/: CMakeLists.txt  pkcs11_service.c  sel4_crashlog.c  sel4_ihc.c  sel4_optee_serializer.c  sys_ctl_services.c  teeos_service.c
